--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -4,6 +4,19 @@ $color-ul: linear-gradient(to top, rgb(233, 146, 195), rgb(140, 107, 127));
 $color-li: rgb(208, 168, 174);
 $color-btn: #2e6329;
 $color-footer: rgb(212, 164, 171);
-
+$color-preguntas: rgba(164, 170, 219, 0.866);
+$color-tarjeta:  rgb(248, 244, 245);
+$color-form: rgb(189, 163, 189);
+$color-sub-yoga: rgb(203, 162, 203);
 // font family
 $letra-ppal: 'Arimo', sans-serif;
+
+//font size tablet
+$font-size-tablet: 20px;
+
+//font size desktop
+$font-size-desktop: 25px;
+
+//width general
+$width-general: 90%;
+
