--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+.container .row nav ul, .contenedorPilates, .contenedor-grid .section-uno, .contenedorMain, .contacto-grid .img-redes {
+  display: flex;
+  margin: 0 auto; }
+
 /* reset */
 * {
   margin: 0;
@@ -19,10 +23,8 @@ body {
 
 .container .row nav ul {
   background-image: linear-gradient(to top, #e992c3, #8c6b7f);
-  display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  margin: 0 auto; }
+  justify-content: space-around; }
   .container .row nav ul li {
     background-color: #d0a8ae;
     display: inline;
@@ -69,6 +71,9 @@ h2, h3 {
       background-color: #dcb3ba; }
 
 /*INDEX SECTION */
+.contenedorMain .contenidoMain .textoMain p {
+  font-size: 1rem; }
+
 .contenedorInfo {
   width: 90%;
   margin: 0 auto; }
@@ -84,8 +89,6 @@ h2, h3 {
 /* PAGINA PILATES */
 .contenedorPilates {
   width: 90%;
-  margin: 0 auto;
-  display: flex;
   flex-direction: column;
   justify-content: center;
   /* video*/ }
@@ -124,13 +127,10 @@ h2, h3 {
     margin-bottom: 2rem; }
 
 /* PAGINA ELONGACION */
-.contenedor-grid .section-uno {
-  display: flex;
-  margin: 0 auto; }
-  .contenedor-grid .section-uno .imgElongacion {
-    width: 90%;
-    margin: 0 auto;
-    margin-bottom: 3rem; }
+.contenedor-grid .section-uno .imgElongacion {
+  width: 90%;
+  margin: 0 auto;
+  margin-bottom: 3rem; }
 
 .contenedor-grid .section-dos {
   display: flex;
@@ -152,9 +152,7 @@ h2, h3 {
 
 /* PAGINA YOGA */
 .contenedorMain {
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto; }
+  flex-direction: column; }
 
 .contenedorMain iframe {
   width: 100%; }
@@ -173,15 +171,15 @@ h2, h3 {
 
 .sectionClases {
   margin: 1.3rem; }
-  .sectionClases p {
-    font-size: 1.3rem;
+  .sectionClases .p-clases {
+    font-size: 1rem;
     text-align: center;
     font-family: "Arimo", sans-serif; }
 
 .tarjetas {
   display: flex;
   flex-direction: row;
-  gap: 3rem;
+  gap: 2.5rem;
   margin: 3rem 0.5rem;
   justify-content: center; }
   .tarjetas .card .tamanio .card-title {
@@ -210,9 +208,7 @@ form {
   grid-template-rows: 0.3fr 0.5fr 1.5fr 0.3fr 0.5fr 0.2fr;
   grid-template-areas: "header header header" "main main main" "form form form" "buscanos buscanos buscanos" "instagram facebook tiktok" "footer footer footer"; }
   .contacto-grid .img-redes {
-    display: flex;
-    width: 35%;
-    margin: 0 auto; }
+    width: 35%; }
   .contacto-grid h3 {
     background-color: rgba(164, 170, 219, 0.866);
     font-family: "Arimo", sans-serif;
@@ -330,7 +326,7 @@ footer h2 {
       width: 80%; }
   /* PILATES */
   .contenedorPilates div .imgPilates {
-    width: 80%;
+    width: 70%;
     height: 800px;
     margin: 0 auto; }
   .contenedorPilates .textoPilates {
