--- a/scss/base/_extend.scss
+++ b/scss/base/_extend.scss
@@ -4,3 +4,10 @@
     display: flex;
     margin: 0 auto;
 }
+
+//subtitulos
+%subtitulos{
+    font-family: $letra-ppal;
+    margin-top: 1rem;
+    text-align: center;
+}
