--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ form {
   grid-template-rows: 0.3fr 0.5fr 1.5fr 0.3fr 0.5fr 0.2fr;
   grid-template-areas: "header header header" "main main main" "form form form" "buscanos buscanos buscanos" "instagram facebook tiktok" "footer footer footer"; }
   .contacto-grid .img-redes {
-    width: 35%; }
+    width: 30%; }
   .contacto-grid h3 {
     background-color: #8CC0DE;
     font-family: "Arimo", sans-serif;
@@ -340,8 +340,8 @@ footer h2 {
     .contenedorPilates .textoPilates .pregunta {
       border: 2px dotted blue;
       margin: 15px; }
-      .contenedorPilates .textoPilates .pregunta h4 {
-        margin: 0px;
+      .contenedorPilates .textoPilates .pregunta h3, .contenedorPilates .textoPilates .pregunta h4 {
+        margin-top: 10px;
         padding: 10px; }
   .contenedorPilates .videoPilates .videoUno {
     width: 70%;
