--- a/scss/style.scss
+++ b/scss/style.scss
@@ -289,7 +289,7 @@ form {
 
     .img-redes{
         @extend %flex;
-        width: 35%;
+        width: 30%;
     }
     h3{
         background-color: nth($colores, 3);
@@ -488,8 +488,8 @@ footer{
             .pregunta{
                 border: 2px dotted blue;
                 margin: 15px;
-                h4{
-                    margin: 0px;
+                h3, h4{
+                    margin-top: 10px;
                     padding: 10px
                 }
             }
